tests/negative/strict_keyword_fr.expect
error[E0001]: identifiant attendu
  --> strict_keyword_fr.vit:2:7
    |
  2 |   let bool = 1
    |       ^^^^
  note: see docs/errors.md#E0001
error[E0002]: expression attendue
  --> strict_keyword_fr.vit:3:10
    |
  3 |   return bool
    |          ^^^^
note: expected expression (e.g. 1, name, call(), { ... })
  --> strict_keyword_fr.vit:3:10
    |
  3 |   return bool
    |          ^^^^
note: parser will resume after the next token
  --> strict_keyword_fr.vit:3:10
    |
  3 |   return bool
    |          ^^^^
